--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,24 @@
     <title>List of Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">List of Owners...</h1>
+<h1 th:text="'List of Owners'">Owners List</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- Iterate over all owners in the model and render this table row for each of them-->
+    <tr th:each="owner: ${owners}">
+        <td th:text="${owner.id}">1</td>
+        <td th:text="${owner.firstName}">Joe</td>
+        <td th:text="${owner.lastName}">Morello</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
