--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,6 +5,24 @@
     <title>List of Vets</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
+<h1 th:text="'List of Vets'">Vets List</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- Iterate over all vets in the model and render this table row for each of them-->
+    <tr th:each="vet: ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Dave</td>
+        <td th:text="${vet.lastName}">Brubeck</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
